fixed overflow

--- a/src/TrystWithTime/index.css
+++ b/src/TrystWithTime/index.css
@@ -6,7 +6,6 @@
   align-items: center;
   height: 100vh;
 	background-size: cover;
-	overflow: hidden;
 }
 
 .coconut{
